--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Rubik", sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
+  background: linear-gradient(
+    108deg,
+    rgba(255, 138, 91, 1) 0%,
+    rgba(234, 82, 111, 1) 100%
+  );
+  height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
+}
+header {
+  padding-top: 48px;
+  font-size: 2rem;
+}
+@media screen and (max-width: 768px) {
+  header {
+    padding-top: 76px;
+  }
+}
+.todoContainer {
+  width: 400px;
+  max-width: 400px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 24px;
+}
+@media screen and (max-width: 768px) {
+  .todoContainer {
+    max-width: 324px;
+    flex-direction: column;
+  }
+}
+.todo {
+  font-size: 1rem;
+  max-width: 186px;
+  overflow-wrap: break-word;
+}
+@media screen and (max-width: 768px) {
+  .todo {
+    display: flex;
+    justify-content: center;
+    overflow-wrap: anywhere;
+    max-width: 264px;
+  }
+}
+form {
+  padding-top: 24px;
+}
+input {
+  font-size: 1rem;
+  width: 286px;
+}
+@media screen and (max-width: 768px) {
+  input {
+    width: 224px;
+  }
+}
+.btnCont {
+  width: 200px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
-
-.App-link {
-  color: #61dafb;
+@media screen and (max-width: 768px) {
+  .btnCont {
+    padding-top: 16px;
+  }
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  font-size: 1rem;
+  margin: 0 8px;
+  padding: 0 8px;
+  background: #25ced1;
+  color: black;
+  border: none;
+  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
 }
